01-namespace.yaml
# 🔎 kubernetes namespace yaml
# labels are used for filteration purpose 
apiVersion: v1
kind: Namespace
metadata:
  name: roboshop
  labels:
    project: roboshop
    environment: dev
