11-pod-secret.yaml
# 🔍 kubernetes secretref from pod

apiVersion: v1
kind: Pod
metadata:
  name: env-configmap
spec:
  containers:
    - name: nginx
      image: nginx
