12-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx
  labels:
    purpose: service-demo
spec:
  selector:
    purpose: service-demo
    project: roboshop
    environment: dev
  ports:
    - protocol: TCP
      port: 80 # service port
      targetPort: 80 # container port 


---
apiVersion: v1
kind: Pod
metadata:
  name: nginx
  labels: 
    purpose: service-demo
    project: roboshop
    environment: dev
spec:
  containers:
  - name: nginx
    image: nginx

# ekkda pod labels yemi ite echharoo aa labels Seletor lo evvali. yenni yekkuva este anta better, yenduku ante oka uniqueness anedi create avutumdhii.

# Eppudu ee service nenu create chesinappudu, ee sercive yemi chestumdhi ante, ee label tho yemi yemi pods unnayo vati annittini ee service kindaki techhesukuntumdhi. 

# Thats the reason we called labels as a selector ani..
